--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "node-html-parser": "^6.1.1",
     "telegraf": "^4.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
