--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "node-html-parser": "^6.1.1",
-    "telegraf": "^4.10.0"
-  },
-  "devDependencies": {
+    "telegraf": "^4.10.0",
     "nodemon": "^2.0.20"
   }
 }
