--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "node-html-parser": "^6.1.1",
-    "telegraf": "^4.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "telegraf": "^4.15.0"
   }
 }
