--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "node-html-parser": "^6.1.1",
     "nodemon": "^2.0.20",
     "telegraf": "^4.15.0"
